[package]
name = "tokenizers-python"
version = "0.10.3"
authors = ["Anthony MOI <m.anthony.moi@gmail.com>"]
edition = "2018"

[lib]
name = "tokenizers"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.3"
serde = { version = "1.0", features = [ "rc", "derive" ]}
serde_json = "1.0"
libc = "0.2"
env_logger = "0.7.1"
pyo3 = "0.13"
numpy = { git = "https://github.com/pyo3/rust-numpy/", rev = "a5e0b287492188550499f1ea3a2b5273e27f9b01" }
ndarray = "0.13"
onig = { version = "6.0", default-features = false }
itertools = "0.9"

[dependencies.tokenizers]
version = "*"
path = "../../tokenizers"

[dev-dependencies]
tempfile = "3.1"

[features]
default = ["pyo3/extension-module"]
